Fixed wrap2 > p inherited height. Small fix for CSS grid media queries.

--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
       <div class="">
         <article>
           <p>The 1st example shows the default look of divs within a div, without any layout coding.</p>
+          <p>Result:</p>
           <div class="grid grid_1 bottomMargin">
             <div>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque ipsum vel quo modi, aperiam rem molestias sapiente. Pariatur, natus.
