Fixed issues with the resposive design for the CSS grid example.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <div class="contentWrapper">
     <div id="wrap1html">
-      <h2>Basic HTML Tags</h2>
+      <h2>HTML Tags</h2>
       <div class="subWrap">
 
         <article>
@@ -234,66 +234,86 @@
     <!-- wrap1html ends -->
 
     <div id="wrap2layout">
-      <h2>CSS Layouts: Floats, Flexbox, CSS Grid</h2>
-      <div class="">
-        <h3>CSS Grid</h3>
-      </div>
-      <div class="">
+      <h2> CSS Grid</h2>
+      <div>
         <article>
           <p>The 1st example shows the default look of divs within a div, without any layout coding.</p>
-          <p>Result:</p>
-          <div class="grid grid_1 bottomMargin">
+          <div class="example-box">
+            <p>CSS:</p>
             <div>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque ipsum vel quo modi, aperiam rem molestias sapiente. Pariatur, natus.
+              <p>Only visual CSS styling was used here.</p>
             </div>
-            <div>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque ipsum vel quo modi, aperiam rem molestias sapiente. Pariatur, natus.
-            </div>
-            <div>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque ipsum vel quo modi, aperiam rem molestias sapiente. Pariatur, natus.
+
+            <p>Result:</p>
+            <div class="grid grid_1 bottomMargin">
+              <div>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque ipsum vel quo modi, aperiam rem molestias sapiente. Pariatur, natus.
+              </div>
+              <div>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque ipsum vel quo modi, aperiam rem molestias sapiente. Pariatur, natus.
+              </div>
+              <div>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque ipsum vel quo modi, aperiam rem molestias sapiente. Pariatur, natus.
+              </div>
             </div>
           </div>
         </article>
 
         <article class="">
-          <p>In this 2nd example, you can see the divs have been split into two. Fractional units have been used. The fraction is - 2fr-3fr or 40%-60%. Fractions are preferred over static units because <strong>percentages, px, em or rem are static units </strong>.
+          <p>In this 2nd example, you can see the divs have been split into two. Fractional units have been used. The fraction is - 2fr-3fr or 40%-60%. Fractions are preferred over static units because<strong> percentages, px, em or rem are static units</strong>.
             you will have problems if you use padding, margins or gaps with static units.</p>
 
           <div class="message-mobile">
             <p>To view this example, please open this page on a device with a larger screen.</p>
           </div>
-          <div class="grid grid_2 bottomMargin content-large">
-            <div>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ratione voluptatem nesciunt voluptatibus natus, odio eius atque magni, nulla iure, molestiae dignissimos iste cum assumenda perspiciatis iusto. Aperiam, esse. Ex.
+
+          <div class="example-box content-large">
+            <p>CSS:</p>
+            <div class="">
+              <p>put css here</p>
             </div>
-            <div>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio ut laborum, harum explicabo sed molestiae rerum sit accusantium consequuntur voluptas, consectetur, necessitatibus praesentium sequi officiis. Dolores fuga blanditiis omnis reiciendis illum
-              praesentium consequuntur ipsa, est fugit iure facere quos, debitis quia ut magnam voluptates consectetur, id provident suscipit dolorem eum quis. Accusantium et vitae deserunt asperiores eaque libero odio, praesentium fuga ut recusandae
-              voluptates labore, sit. Autem voluptatum rem excepturi quaerat distinctio in. Facilis distinctio fugit accusamus at a quod.
+            <p>Result:</p>
+
+            <div class="grid grid_2">
+              <div>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ratione voluptatem nesciunt voluptatibus natus, odio eius atque magni, nulla iure, molestiae dignissimos iste cum assumenda perspiciatis iusto. Aperiam, esse. Ex.
+              </div>
+              <div>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio ut laborum, harum explicabo sed molestiae rerum sit accusantium consequuntur voluptas, consectetur, necessitatibus praesentium sequi officiis. Dolores fuga blanditiis omnis reiciendis illum
+                praesentium consequuntur ipsa, est fugit iure facere quos, debitis quia ut magnam voluptates consectetur, id provident suscipit dolorem eum quis. Accusantium et vitae deserunt asperiores eaque libero odio, praesentium fuga ut recusandae
+                voluptates labore, sit. Autem voluptatum rem excepturi quaerat distinctio in. Facilis distinctio fugit accusamus at a quod.
+              </div>
             </div>
           </div>
         </article>
 
         <article class="">
           <p>In this 3rd example you can see 4 divs, but the grid system uses 3 fr declarations - <strong>1fr-2fr-1fr</strong>. So, even if you add 10 more divs within the main div the system will keep the layout exactly the same.</p>
-
           <div class="message-mobile">
             <p>To view this example, please open this page on a device with a larger screen.</p>
           </div>
-          <div class="grid grid_3 bottomMargin content-large">
-            <div>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui dicta, quam. Quasi cumque aspernatur temporibus, ducimus nobis sed explicabo nihil magni quae totam, neque possimus!
+          <div class="example-box content-large">
+            <p>CSS:</p>
+            <div class="">
+              <p>put css here</p>
             </div>
-            <div>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor doloribus iusto esse sit facilis ex quaerat, voluptatem cupiditate. Molestias omnis officia aspernatur, nam inventore nihil adipisci assumenda debitis. Labore dignissimos quisquam sunt mollitia
-              consectetur ab magnam quas voluptate in, similique, iste ullam iure voluptas recusandae voluptatem inventore, iusto tempora animi!
-            </div>
-            <div>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime veniam maiores voluptates deleniti quae asperiores unde libero necessitatibus minima minus voluptate nihil nemo nisi, non vel ab dolore repellat provident, totam cupiditate? Doloribus, pariatur,
-              cum.
-            </div>
-            <div>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, obcaecati!
+            <p>Result:</p>
+
+            <div class="grid grid_3">
+              <div>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui dicta, quam. Quasi cumque aspernatur temporibus, ducimus nobis sed explicabo nihil magni quae totam, neque possimus!
+              </div>
+              <div>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor doloribus iusto esse sit facilis ex quaerat, voluptatem cupiditate. Molestias omnis officia aspernatur, nam inventore nihil adipisci assumenda debitis. Labore dignissimos quisquam sunt mollitia
+                consectetur ab magnam quas voluptate in, similique, iste ullam iure voluptas recusandae voluptatem inventore, iusto tempora animi!
+              </div>
+              <div>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime veniam maiores voluptates deleniti quae asperiores unde libero necessitatibus minima minus voluptate nihil nemo nisi, non vel ab dolore repellat provident, totam cupiditate? Doloribus, pariatur,
+                cum.
+              </div>
+              <div>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, obcaecati!
+              </div>
             </div>
           </div>
         </article>
@@ -305,24 +325,32 @@
           <div class="message-mobile">
             <p>To view this example, please open this page on a device with a larger screen.</p>
           </div>
-          <div class="grid grid_4 bottomMargin content-large">
-            <div>
-              Lorem ipsum dolor sit.
+          <div class="example-box content-large">
+            <p>CSS:</p>
+            <div class="">
+              <p>put css here</p>
             </div>
-            <div>
-              Lorem ipsum dolor sit.
-            </div>
-            <div>
-              Lorem ipsum dolor sit.
-            </div>
-            <div>
-              Lorem ipsum dolor sit.
-            </div>
-            <div>
-              Lorem ipsum dolor sit.
-            </div>
-            <div>
-              Lorem ipsum dolor sit.
+            <p>Result:</p>
+
+            <div class="grid grid_4">
+              <div>
+                Lorem ipsum dolor sit.
+              </div>
+              <div>
+                Lorem ipsum dolor sit.
+              </div>
+              <div>
+                Lorem ipsum dolor sit.
+              </div>
+              <div>
+                Lorem ipsum dolor sit.
+              </div>
+              <div>
+                Lorem ipsum dolor sit.
+              </div>
+              <div>
+                Lorem ipsum dolor sit.
+              </div>
             </div>
           </div>
         </article>
@@ -330,128 +358,141 @@
           <p>In this 5th example, you can see the minmax height subfunction used with parameters of 100px and auto. This means that the minimum height of a box will be 100px and if the content overflows the height of the box will adjust itself automatically,
             as it can be seen below.</p>
           <p> You can also see nested divs with their own grid system. Visually they have a gap value, also some padding and border. You can also see that they can be aligned any way you want using the appropriate coding.</p>
-          <div class="message-mobile">
+          <div class="message-tablet">
             <p>To view this example, please open this page on a device with a larger screen.</p>
           </div>
-          <div class="grid grid_5 bottomMargin content-largest">
-            <div class="nestedDiv nestedDiv1">
-              <div>lorem</div>
-              <div>lorem</div>
-              <div>lorem</div>
-              <div>lorem</div>
-              <div>lorem</div>
-              <div>lorem</div>
-              <div>lorem</div>
-              <div>lorem</div>
-              <div>lorem</div>
-              <div>lorem</div>
-              <div>lorem</div>
-              <div>lorem</div>
+          <div class="example-box content-largest">
+            <p>CSS:</p>
+            <div class="">
+              <p>put css here</p>
             </div>
-            <div class="nestedDiv nestedDiv2">
-              <div>START</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-            </div>
-            <div class="nestedDiv nestedDiv3">
-              <div>CENTER</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-            </div>
-            <div class="nestedDiv nestedDiv4">
-              <div>END</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-            </div>
-            <div>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas recusandae harum, dolor aliquam sint aspernatur est aperiam repellendus modi quidem rerum, quos eaque quia! Ipsam esse voluptas ea quaerat quam incidunt in quisquam voluptatibus dicta,
-              illo quae minus autem omnis.
-            </div>
-            <div class="nestedDiv nestedDiv5">
-              <div>START</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-            </div>
-            <div class="nestedDiv nestedDiv6">
-              <div>START</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-            </div>
-            <div class="nestedDiv nestedDiv7">
-              <div>START</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-              <div>lo</div>
-            </div>
-            <div class="exampleDiv1">
-              Aligned to the center.
-            </div>
-            <div class="exampleDiv2">
-              Aligned to the end.
+            <p>Result:</p>
+            <div class="grid grid_5">
+              <div class="nestedDiv nestedDiv1">
+                <div>lorem</div>
+                <div>lorem</div>
+                <div>lorem</div>
+                <div>lorem</div>
+                <div>lorem</div>
+                <div>lorem</div>
+                <div>lorem</div>
+                <div>lorem</div>
+                <div>lorem</div>
+                <div>lorem</div>
+                <div>lorem</div>
+                <div>lorem</div>
+              </div>
+              <div class="nestedDiv nestedDiv2">
+                <div>START</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+              </div>
+              <div class="nestedDiv nestedDiv3">
+                <div>CENTER</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+              </div>
+              <div class="nestedDiv nestedDiv4">
+                <div>END</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+              </div>
+              <div>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas recusandae harum, dolor aliquam sint aspernatur est aperiam repellendus modi quidem rerum, quos eaque quia! Ipsam esse voluptas ea quaerat quam incidunt in quisquam voluptatibus dicta,
+                illo quae minus autem omnis.
+              </div>
+              <div class="nestedDiv nestedDiv5">
+                <div>START</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+              </div>
+              <div class="nestedDiv nestedDiv6">
+                <div>START</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+              </div>
+              <div class="nestedDiv nestedDiv7">
+                <div>START</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+                <div>lo</div>
+              </div>
+              <div class="exampleDiv1">
+                Aligned to the center.
+              </div>
+              <div class="exampleDiv2">
+                Aligned to the end.
+              </div>
             </div>
           </div>
         </article>
 
         <article class="">
-            <p>As you can see below in this 6th example. This is perhaps the most powerful feature of the CSS Grid system. This separates it from flexbox and floats. As you can see you can stretch individual boxes in pretty much any direction within the
-              box model. All that being said as you can see the boxes automatically resize each other to keep within their boundaries.</p>
-              <div class="message-mobile">
-                <p>To view this example, please open this page on a device with a larger screen.</p>
-              </div>
-            <div class="grid grid_6 bottomMargin content-large">
+          <p>As you can see below in this 6th example. This is perhaps the most powerful feature of the CSS Grid system. This separates it from flexbox and floats. As you can see you can stretch individual boxes in pretty much any direction within the box
+            model. All that being said as you can see the boxes automatically resize each other to keep within their boundaries.</p>
+          <div class="message-mobile">
+            <p>To view this example, please open this page on a device with a larger screen.</p>
+          </div>
+          <div class="example-box content-large">
+            <p>CSS:</p>
+            <div class="">
+              <p>put css here</p>
+            </div>
+            <p>Result:</p>
+            <div class="grid grid_6">
               <div class="box box_1">
                 box1
               </div>
@@ -474,6 +515,7 @@
                 Lorem ipsum dolor sit.
               </div>
             </div>
+          </div>
         </article>
 
       </div>
