Messing around with styles, removing bulk and improving contrast.

--- a/index.html
+++ b/index.html
@@ -175,14 +175,14 @@
           </div>
         </article>
 
-        <article>
+        <!-- <article>
           <h3><strong>&lt;q&gt;</strong></h3>
           <p>This tag is used for short questions and browser usually insert quotation marks around the quote.</p>
           <div class="example-box">
             <p class="bottom-padding">HTML: &lt;q&gt;Text&lt;&sol;q&gt;</p>
             <p>Result: <q>Don't cry because it's over, smile because it happened.</q> &ndash; Dr. Seuss</p>
           </div>
-        </article>
+        </article> -->
 
         <article>
           <h3><strong>&lt;backquote&gt;</strong></h3>
@@ -231,7 +231,7 @@
       </div>
       <!-- subWrap ends -->
     </div>
-    <!-- wrap1html ends -->
+    <!-- wrap1html ENDS HERE -->
 
     <div id="wrap2layout">
       <h2> CSS Grid</h2>
@@ -521,8 +521,7 @@
       </div>
       <!-- subWrap ends -->
     </div>
-
-    <!-- wrap2layout ends -->
+    <!-- wrap2layout ENDS HERE -->
 
     <!-- <div id="wrap3images">
       <h2>Images </h2>
