--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       <h2> CSS Grid</h2>
       <div>
         <article>
-          <p>The 1st example shows the default look of divs within a div, without any layout coding.</p>
+          <p>The 1st example shows somewhat default look of divs within a div, without any special CSS grid layout coding.</p>
           <div class="example-box">
             <p>CSS:</p>
             <div class="codeExample">
@@ -270,7 +270,6 @@
                 </p>
               </div>
             </div>
-
             <p>Result:</p>
             <div class="grid grid_1 bottomMargin">
               <div>
@@ -287,17 +286,24 @@
         </article>
 
         <article class="">
-          <p>In this 2nd example, you can see the divs have been split into two. Fractional units have been used. The fraction is - 2fr-3fr or 40%-60%. Fractions are preferred over static units because<strong> percentages, px, em or rem are static units</strong>.
-            you will have problems if you use padding, margins or gaps with static units.</p>
+          <p>In this 2nd example, you can see the divs have been split into two. Fractional units have been used. The fraction is 2fr-3fr or 40%-60%. Fractions are preferred over static units such as: <strong> percentages, px, em or rem</strong> because
+            you will have layout problems if you use padding, margins or gaps with static units.</p>
 
           <div class="message-mobile">
             <p>To view this example, please open this page on a device with a larger screen.</p>
           </div>
 
           <div class="example-box content-large">
+
             <p>CSS:</p>
-            <div class="">
-              <p>put css here</p>
+            <div class="indent">
+              <p>
+                &sol;&sol; The below code sets fractional divide for a two column layout as a 40% and 60% split.
+              </p>
+              <p>
+                .grid&lowbar;2 &lbrace; <br> &emsp;grid&dash;template&dash;columns&colon; 2fr 3fr&semi;
+                <br> &rbrace;
+              </p>
             </div>
             <p>Result:</p>
 
@@ -315,14 +321,16 @@
         </article>
 
         <article class="">
-          <p>In this 3rd example you can see 4 divs, but the grid system uses 3 fr declarations - <strong>1fr-2fr-1fr</strong>. So, even if you add 10 more divs within the main div the system will keep the layout exactly the same.</p>
+          <p>In this 3rd example you can see 4 divs, but the grid system uses 3 fr declarations - <strong>1fr-2fr-1fr</strong>. So, even if you add 10 more divs within the main div the system will keep the layout go on exactly the same as the first row.</p>
           <div class="message-mobile">
             <p>To view this example, please open this page on a device with a larger screen.</p>
           </div>
           <div class="example-box content-large">
             <p>CSS:</p>
-            <div class="">
-              <p>put css here</p>
+            <div class="indent">
+              <p>
+                .grid&lowbar;3 &lbrace; <br> &emsp;grid&dash;template&dash;columns&colon; 1fr 2fr 1fr&semi; <br> &rbrace;
+              </p>
             </div>
             <p>Result:</p>
 
@@ -347,15 +355,17 @@
 
         <article class="">
 
-          <p>In this 4th example you can see 6 column layout, however, repeat subfunction has been used here to demonstrate a simplified method if you need one.</p>
+          <p>In this 4th example you can see 6 column layout, however, repeat subfunction has been used here to demonstrate a simplified method, if you need one.</p>
 
           <div class="message-mobile">
             <p>To view this example, please open this page on a device with a larger screen.</p>
           </div>
           <div class="example-box content-large">
             <p>CSS:</p>
-            <div class="">
-              <p>put css here</p>
+            <div class="indent">
+              <p>
+                .grid&lowbar;4 &lbrace; <br> &emsp;grid&dash;template&dash;columns&colon; repeat&lpar;6, 1fr&rpar;&semi; <br> &rbrace;
+              </p>
             </div>
             <p>Result:</p>
 
@@ -390,8 +400,61 @@
           </div>
           <div class="example-box content-largest">
             <p>CSS:</p>
-            <div class="">
-              <p>put css here</p>
+            <div class="indent">
+              <p>
+                .grid&lowbar;5 &lbrace; <br> &emsp;grid&dash;template&dash;columns&colon; repeat&lpar;5, 1fr&rpar;&semi; <br> &emsp;gird&dash;auto&dash;rows&colon; minmax&lpar;10px, auto&rpar;&semi;
+                <br>&rbrace;
+              </p>
+              <p>
+                .nestedDiv &lbrace;<br> &emsp;display&colon; grid&semi;<br> &emsp;grid&dash;template&dash;columns&colon; repeat&lpar;3, 1fr&rpar;&semi;<br> &emsp;grid&dash;auto&dash;rows&colon; 50px&semi;
+                <br>&rbrace;
+              </p>
+              <p>
+                .nestedDiv &gt; div &lbrace;<br>
+                &emsp;border&colon; 1px dotted black&semi;<br>
+                &emsp;padding&colon;left&colon; 5px&semi;
+                <br>&rbrace;
+              </p>
+              <p>
+                .nestedDiv2 &lbrace;<br>
+                &emsp;justify&dash;items&colon; start&semi;
+                <br>&rbrace;
+              </p>
+              <p>
+                .nestedDiv3 &lbrace;<br>
+                &emsp;justify&dash;items&colon; center&semi;
+                <br>&rbrace;
+              </p>
+              <p>
+                .nestedDiv4 &lbrace;<br>
+                &emsp;justify&dash;items&colon; end&semi;
+                <br>&rbrace;
+              </p>
+              <p>
+                .nestedDiv5 &lbrace;<br>
+                &emsp;align&dash;items&colon; start&semi;
+                <br>&rbrace;
+              </p>
+              <p>
+                .nestedDiv6 &lbrace;<br>
+                &emsp;align&dash;items&colon; center&semi;
+                <br>&rbrace;
+              </p>
+              <p>
+                .nestedDiv7 &lbrace;<br>
+                &emsp;align&dash;items&colon; end&semi;
+                <br>&rbrace;
+              </p>
+              <p>
+                .exampleDiv1 &lbrace;<br>
+                &emsp;align&dash;items&colon; center&semi;
+                <br>&rbrace;
+              </p>
+              <p>
+                .exampleDiv2 &lbrace;<br>
+                &emsp;align&dash;items&colon; end&semi;
+                <br>&rbrace;
+              </p>
             </div>
             <p>Result:</p>
             <div class="grid grid_5">
@@ -515,8 +578,40 @@
           </div>
           <div class="example-box content-large">
             <p>CSS:</p>
-            <div class="">
-              <p>put css here</p>
+            <div class="indent">
+              <p>
+                .grid&lowbar;4 &lbrace; <br> &emsp;grid&dash;template&dash;columns&colon; 1fr 2fr 1fr&semi; <br>
+                &emsp;grid&dash;auto&dash;rows&colon; minmax&lpar;100px, auto&rpar;&semi;
+                <br> &rbrace;
+              </p>
+              <p>
+                .box&lowbar;1 &lbrace; <br>
+                &emsp;grid&dash;column&colon; 1&sol;3&semi; <br>
+                &emsp;grid&dash;row&colon; 1&sol;3&semi;
+                <br> &rbrace;
+              </p>
+              <p>
+                .box&lowbar;2 &lbrace; <br>
+                &emsp;grid&dash;row&colon; 1&sol;3&semi;
+                <br> &rbrace;
+              </p>
+              <p>
+                .box&lowbar;3 &lbrace; <br>
+                &emsp;grid&dash;column&colon; 1&semi; <br>
+                &emsp;grid&dash;row&colon; 2&sol;4&semi;
+                <br> &rbrace;
+              </p>
+              <p>
+                .box&lowbar;3 &lbrace; <br>
+                &emsp;grid&dash;column&colon; 1&semi; <br>
+                &emsp;grid&dash;row&colon; 2&sol;4&semi;
+                <br> &rbrace;
+              </p>
+              <p>
+                .box&lowbar;4 &lbrace; <br>
+                &emsp;grid&dash;column&colon; 2&sol;4&semi;
+                <br> &rbrace;
+              </p>
             </div>
             <p>Result:</p>
             <div class="grid grid_6">
